@@ -1197,6 +1197,16 @@ DEB_PYTHON_INSTALL_ARGS_ALL = --no-compile --optimize --force
 DEB_PYTHON_INSTALL_ARGS_foo := --root=debian/foo-install-dir/
 </programlisting>
       </para>
+
+      <para>Occassionally, you might have a package called
+      <literal>python-something</literal> that you don't want handled
+      by this class, for example a <literal>-doc</literal> package.
+      You can list these packages in the variable
+      <varname>DEB_PYTHON_PACKAGES_EXCLUDE</varname>.  For example:
+<programlisting>
+DEB_PYTHON_PACKAGES_EXCLUDE = python-mylib-doc
+</programlisting>
+      </para>
     </sect1>
 
     <sect1>
