@@ -1,8 +1,10 @@
 cdbs (0.4.40) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * Acknowledge NMU (closes: #365085)
+  * Added DEB_PYTHON_PACKAGES_EXCLUDE (python-distutils.mk)
+    (closes: #365257)
 
- -- Peter Eisentraut <petere@debian.org>  Fri, 12 May 2006 16:40:20 +0200
+ -- Peter Eisentraut <petere@debian.org>  Fri, 12 May 2006 23:06:55 +0200
 
 cdbs (0.4.39-0.1) unstable; urgency=low
 
